# telegram_deleted_messages_exporter

./: .gitignore  LICENSE  README.md  ROADMAP.md  code.py  format_for_telegram.py  pyproject.toml  requirements.txt
config/: secrets.env.example
telegram_deleted_messages/: __init__.py  doctor.py  export.py  formatter.py
tests/: test_doctor.py  test_export_collection.py  test_export_config.py  test_formatter.py
